--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -31,5 +31,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':library')
+    compile project(':persistent-search')
 }
